--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -450,30 +450,44 @@ As a result of its expressive power, OWL 2 DL allows a large variety of sophisti
 
 \textcolor{red}{at least 1 example for each class}
 
+%We divide these constraints into three classes:
+%\begin{itemize}
+	%\item constraints expressible by OWL 2 QL
+	%\item constraints not expressible by OWL 2 QL but by OWL 2 DL
+	%\item constraints only expressible by other DSCLs
+%\end{itemize}
+
+The W3C and DCMI WGs identified in total 74 requirements to formulate RDF constraints\footnote{Two of this paper's authors are actively contributing to these WGs and the process deriving requirements from case studies and use cases is still ongoing.}.
+Bosch et al.\footnote{available at: \url{https://github.com/boschthomas/rdf-validation-research/paper}} explained each requirement in detail and give at least one example for each of them expressed by different DSCLs.
+We added mappings to DL in order to logically underpin each requirement and in order to determine which DL constructs are needed to express each associated constraint.
+When we know he DL constructs needed to express a particular constraint, we can determine the needed expressivity and the complexity. 
+
+The constraint \ms{Context-Specific Exclusive OR of Properties} (see section~\ref{sec:rdf-validation-requirements-without-reasoning-2}), for example, can generically be expressed as follows:
+\begin{eqnarray*}
+C \sqsubseteq (\neg A \sqcap B) \sqcup (A \sqcap \neg B) \\
+A \equiv \exists <property A> . <range> \\
+B \equiv \exists <property A> . <range> \\ 
+\end{eqnarray*}
+As this constraint is a complex constraint (constructed out of multiple complex and simple constraints), 
+the constraint's expressivity is calculated as the expressivity of the individual constraints used to express the complex constraint.
+The DL constructs \ms{property inclusion}, \ms{complement}, \ms{intersection}, \ms{union}, \ms{existential restriction} are used to express this constraint.  
+As existential restrictions are part of OWL 2 DL reasoning, the constraint's complexity is \textsc{N2exptime}.
  
+We evaluated to which extend the most promising five DSCLs fulfill each requirement.
+Tilde means that this constraint may be fulfilled by that particular constraint language - either by limitations, workarounds, or extensions.
+We also evaluated if a specific constraint is fulfilled by OWL 2 QL or if the more expressive OWL 2 DL is needed. 
+Inferencing may be performed prior to validating constraints. This is marked with an asterisk.
 
-We divide these constraints into three classes:
-\begin{itemize}
-	\item constraints expressible by OWL 2 QL
-	\item constraints not expressible by OWL 2 QL but by OWL 2 DL
-	\item constraints only expressible by other DSCLs
-\end{itemize}
+\cite{BoschNolleAcarEckert2015}
 
-Bosch et al.\footnote{\url{https://github.com/boschthomas/rdf-validation-research/paper}} explained each requirement and associated constraint in detail and give at least one example for each of them\cite{BoschNolleAcarEckert2015}.
-In order to logically underpin each requirement, we added mappings to DL.  
-
-\tb{How should we publish this?}
+\tb{How to publish the requirements evaluation? as technical report?}
 
 \subsection{Classification Dimension Expressivity}
 
 There are no reserved words for expressivity like LOGSPACE for complexity in computational logic.
 For the expressivity of DSCLs, we need to define our own reserved words.
 
-The W3C and DCMI WGs identified in total 74 requirements to formulate RDF constraints\footnote{Two of this paper's authors are actively contributing to these WGs and the process deriving requirements from case studies and use cases is still ongoing.}.
-We evaluated to which extend the five possible standard constraint languages fulfill each requirement to formulate RDF constraints.
-Tilde means that this constraint may be fulfilled by that particular constraint language - either by limitations, workarounds, or extensions.
-We also evaluated if a specific constraint is fulfilled by OWL 2 QL or if the more expressive OWL 2 DL is needed. 
-Inferencing may be performed prior to validating constraints. This is marked with an asterisk.
+
 
 \begin{evaluation}
 OWL 2 QL reasoning axioms (11) & & & & & & \\
@@ -694,6 +708,7 @@ The literal pattern matching constraint validates \ms{DroidNumber} literals acco
 but not for the triples \ms{Luke hasDroid R2-D2} and \ms{R2-D2 droidNumber "R2-D2"\textasciicircum{}\textasciicircum{}DroidNumber}.
 
 \subsubsection{Not Expressible by OWL 2 QL but by OWL 2 DL}
+\label{sec:rdf-validation-requirements-without-reasoning-2}
 
 \textbf{Allowed Values}\footnote{corresponds to R-30-ALLOWED-VALUES-FOR-RDF-OBJECTS and R-37-ALLOWED-VALUES-FOR-RDF-LITERALS}\textbf{.}
 It is a common requirement to narrow down the value space of a property by an exhaustive enumeration of the valid values (both literals or resources). This is often rendered in drop down boxes or radio buttons in user interfaces. 
